DEEPTHOUGHT
$> hostname; uname -msr
DESKTOP-J0LTABQ
Linux 4.4.0-19041-Microsoft x86_64
$> date
Thu Aug 26 22:31:32 +01 2021
$> gcc --version
gcc (Ubuntu 9.3.0-17ubuntu1~20.04) 9.3.0
$> clang --version
$> echo $USER_NAME
alaamimi

Ready for testing

LOADING c07:

= ex00 =
==========================================

Norme: ./src/c07/ex00/ft_strdup.c: OK
$> gcc -Wall -Werror -Wextra ./tests/c07/ex00/main.c ./src/c07/ex00/ft_strdup.c -o /home/vlad/Pool-Destroyer/user_output/c07/ex00
./tests/c07/ex00/main.c: In function ‘main’:
./tests/c07/ex00/main.c:18:11: error: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
   18 |  printf("%s\n", ft_strdup("Hello!"));
      |          ~^     ~~~~~~~~~~~~~~~~~~~
      |           |     |
      |           |     int
      |           char *
      |          %d
cc1: all warnings being treated as errors
This compilation failed.	[0;31m[KO][0m 

diff ko :(



All c07 tests are done.

Its either your code survives or it gets wrecked.
